--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -28,4 +32,15 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
+}
+
+
+publish {
+    repoName = 'maven'           //bintray仓库名
+    userOrg = 'zitan'           //bintray注册的用户名
+    groupId = 'com.sina'            //compile引用时的第1部分groupId
+    artifactId = 'ToastUtil'       //compile引用时的第2部分项目名
+    publishVersion = '1.0.0'       //compile引用时的第3部分版本号
+    desc = 'This is a simple ToastUtil library for Android'
+    website = 'https://github.com/zhiweiAndroid/ToastUtil'
 }
