--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -19,6 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //配置信息
     lintOptions {
         abortOnError false
     }
